v1.1.0/modules/schema/pages/class/ReactancePerLength.adoc
= `ReactancePerLength`
:toclevels: 4


+++Reactance (imaginary part of impedance) per unit of length, at rated frequency.+++


[cols="h,3",width=60%]
|===
| Type
| CIM data type class


| URI
| `cim:ReactancePerLength`


| CIM standard (perspective)
| IEC61970 (Grid)


|===

== Slots

[cols="1,1,2",width=100%]
|===
| Name | Type | Description

| `value`
| 0..1 +
https://w3id.org/linkml/Float[`float`]
//| +++None+++
| n/a

| `multiplier`
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
//| +++None+++
| n/a

| `unit`
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
//| +++None+++
| n/a
|===

////

'''


//[discrete]
[#multiplier]
=== `multiplier`


[cols="h,1",width=60%]
|===
| URI
| `cim:ReactancePerLength.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
|===

//[discrete]
[#unit]
=== `unit`


[cols="h,1",width=60%]
|===
| URI
| `cim:ReactancePerLength.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
|===

//[discrete]
[#value]
=== `value`


[cols="h,1",width=60%]
|===
| URI
| `cim:ReactancePerLength.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]
|===

////

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/PerLengthSequenceImpedance.adoc[`PerLengthSequenceImpedance`] | xref::class/PerLengthSequenceImpedance.adoc#x0[`x0`]



| xref::class/PhaseImpedanceData.adoc[`PhaseImpedanceData`] | xref::class/PhaseImpedanceData.adoc#x[`x`]


|===

